修一下路径，将index 改为 main,将login 改为 index,同时登陆权限验证还未成功

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -6,19 +6,19 @@
 		<meta name="description" content="with draggable and editable events" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- basic styles -->
-		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<link href="css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" th:href="@{/css/bootstrap-responsive.min.css}"/>
+		<link rel="stylesheet" href="css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}"/>
 		<!--[if IE 7]>
 		  <link rel="stylesheet" href="css/font-awesome-ie7.min.css" />
 		<![endif]-->
 		<!-- page specific plugin styles -->
 		
-		<link rel="stylesheet" href="css/fullcalendar.css" />
+		<link rel="stylesheet" href="css/fullcalendar.css" th:href="@{/css/fullcalendar.css}"/>
 		<!-- ace styles -->
-		<link rel="stylesheet" href="css/ace.min.css" />
-		<link rel="stylesheet" href="css/ace-responsive.min.css" />
-		<link rel="stylesheet" href="css/ace-skins.min.css" />
+		<link rel="stylesheet" href="css/ace.min.css" th:href="@{/css/ace.min.css}"/>
+		<link rel="stylesheet" href="css/ace-responsive.min.css" th:href="@{/css/ace-responsive.min.css}"/>
+		<link rel="stylesheet" href="css/ace-skins.min.css" th:href="@{/css/ace-skins.min.css}"/>
 		<!--[if lt IE 9]>
 		  <link rel="stylesheet" href="css/ace-ie.min.css" />
 		<![endif]-->
