--- a/src/main/resources/templates/buttons.html
+++ b/src/main/resources/templates/buttons.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head >
 		<meta charset="utf-8" />
 		<title>Buttons & Icon - Ace Admin</title>
 		<meta name="description" content="Common Buttons & Icons" />
