添加了验证码

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -111,14 +111,10 @@
 			<i class="icon-double-angle-up icon-only"></i>
 		</a>
 		<!-- basic scripts -->
-		<script src="1.9.1/jquery.min.js"></script>
-		<script type="text/javascript">
-		window.jQuery || document.write("<script src='js/jquery-1.9.1.min.js'>\x3C/script>");
-		</script>
-		
+
+		<script src="comm/jquery.min.js" th:src="@{/comm/jquery.min.js}"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<!-- page specific plugin scripts -->
-		
 		<script type="text/javascript" src="js/jquery-ui-1.10.2.custom.min.js"></script>
 		<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
 		<script type="text/javascript" src="js/fullcalendar.min.js"></script>
