--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,6 +61,13 @@
 							<i class="icon-lock"></i>
 						</span>
 					</label>
+					<label>
+						<span class="block input-icon input-icon-right">
+							<canvas id="myCanvas" width="75" height="30" style="border:1px solid #d3d3d3;vertical-align: text-bottom;"></canvas> &nbsp;
+	                        <input type="text" name="yzm" id="cvyzm" style="vertical-align: text-bottom;"/>
+						    <input type="hidden" id="yzmID" />
+						</span>
+					</label>
 					<div class="space"></div>
 					<div class="row-fluid">
 						<label class="span8">
@@ -109,6 +116,13 @@
 							<input type="text" class="span12"  placeholder="手机号码" name="phone"/>
 							<i class="icon-phone"></i>
 						</span>
+					 </label>
+					 <label>
+						 <span class="block input-icon input-icon-right">
+							 <canvas id="myCanvas1" width="75" height="30" style="border:1px solid #d3d3d3;vertical-align: text-bottom;"></canvas> &nbsp;
+	                         <input type="text" name="numyzm" id="numyzm" style="vertical-align: text-bottom;"/>
+
+						 </span>
 					 </label>
 	
 					<div class="row-fluid">
